refactor: Updated DocumentConflictException class
Improved consistency with other custom exception classes